  - added function GWEN_List_SetRefPtrInfo()
    The two latter functions can be used to inform the list code about
    _free() and _dup() functions of the elements stored in the list. This
    is used when copying lists. It can also be used to set the list into
    AUTODELETE mode (which is off by default to maintain compatibility with
    existing code).


2004/12/14: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- GWEN_XSD:
  - added support for precompiled profiles
    - added function GWEN_XSD_ProfileToXml()
    - added function GWEN_XSD_ProfileFromXml()
  - fixed some functions to not modify the profile once it is complete
- GWEN_XML:
  - added function GWEN_XMLNode_SetCharValue()
  - added function GWEN_XMLNode_SetIntValue()
  - added optional handling of header tags (such as <?xml?> or <!DOCTYPE>).
    These tags can now be extracted and stored as headers (instead of normal
    tags) with the root node of a file. When using the flag 
    GWEN_XML_FLAGS_HANDLE_HEADERS on both reading and writing of a file it
    still looks the same as it did before. 
    Since this new flag is off by default this new feature is completely
    optional.
    - added flag GWEN_XML_FLAGS_HANDLE_HEADERS
    - added function GWEN_XMLNode_GetHeader()
    - added function GWEN_XMLNode_AddHeader()
    - added function GWEN_XMLNode_DelHeader()
    - added function GWEN_XMLNode_ClearHeaders()
- GWEN_TEXT:
  - fixed a bug in GWEN_Text_CountUtf8Chars()
- added a test profile which can be used with "gwentest xsd3"
- Christian established that the current CVS compiles under MinGW32.
- changed format of plugin description files (are now valid XML files)
- added schema for plugin description files and an example file


2004/12/13: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
Please note: The changes below are not checked on WIN32 !!
I sometimes used the function strncasecmp(), maybe we have to find a way